# RubicsCubeGeneticAlgoSolver

./: CMakeLists.txt  cubic.cpp  cubic.hpp  genetic.cpp  genetic.hpp  main.cpp
